parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    PROGRAMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ID ; vars programaF main
Rule 2     main -> MAIN ( ) bloque
Rule 3     programaF -> function programaF
Rule 4     programaF -> empty
Rule 5     function -> FUNCTION tipoRetorno ID ( functionParam ) functionAux bloque
Rule 6     function -> empty
Rule 7     functionAux -> <empty>
Rule 8     tipoRetorno -> INT
Rule 9     tipoRetorno -> FLOAT
Rule 10    tipoRetorno -> VOID
Rule 11    bloque -> { cuerpo }
Rule 12    cuerpo -> vars estatutop
Rule 13    estatutop -> estatuto estatutop
Rule 14    estatutop -> empty
Rule 15    estatuto -> asignacion
Rule 16    estatuto -> condicion
Rule 17    estatuto -> write
Rule 18    estatuto -> while
Rule 19    estatuto -> return
Rule 20    estatuto -> empty
Rule 21    return -> RETURN superexpresion ;
Rule 22    condicion -> IF ( superexpresion ) bloque condicionelse
Rule 23    condicionelse -> ELSE bloque
Rule 24    condicionelse -> empty
Rule 25    write -> WRITE ( superexpresion ) ;
Rule 26    while -> WHILE ( superexpresion ) bloque
Rule 27    asignacion -> vars
Rule 28    asignacion -> id asignacionp
Rule 29    asignacionp -> = superexpresion ;
Rule 30    asignacionp -> [ superexpresion ] ;
Rule 31    superexpresion -> megaexpresion superexpresionp
Rule 32    superexpresionp -> AND superexpresion
Rule 33    superexpresionp -> OR superexpresion
Rule 34    superexpresionp -> empty
Rule 35    megaexpresion -> exp megaexpresionp
Rule 36    megaexpresionp -> < exp
Rule 37    megaexpresionp -> > exp
Rule 38    megaexpresionp -> EQUALS exp
Rule 39    megaexpresionp -> DIFF exp
Rule 40    megaexpresionp -> LTHANEQ exp
Rule 41    megaexpresionp -> GTHANEQ exp
Rule 42    megaexpresionp -> empty
Rule 43    exp -> termino expp
Rule 44    expp -> + exp
Rule 45    expp -> - exp
Rule 46    expp -> empty
Rule 47    termino -> factor terminop
Rule 48    terminop -> * termino
Rule 49    terminop -> / termino
Rule 50    terminop -> empty
Rule 51    factor -> constante
Rule 52    factor -> lParen superexpresion rParen
Rule 53    lParen -> (
Rule 54    rParen -> )
Rule 55    constante -> id
Rule 56    constante -> CTEF ctef
Rule 57    constante -> CTEI ctei
Rule 58    ctef -> <empty>
Rule 59    ctei -> <empty>
Rule 60    functionParam -> parametro
Rule 61    functionParam -> empty
Rule 62    parametro -> tipo ID parametrop
Rule 63    parametrop -> , parametro
Rule 64    parametrop -> empty
Rule 65    vars -> varsp
Rule 66    varsp -> tipo varspp ; varsp
Rule 67    varsp -> empty
Rule 68    varspp -> ID varsppp
Rule 69    varsppp -> , varspp
Rule 70    varsppp -> empty
Rule 71    tipo -> INT
Rule 72    tipo -> FLOAT
Rule 73    tipo -> CHAR
Rule 74    id -> ID idp
Rule 75    idp -> ( idpp )
Rule 76    idp -> [ superexpresion ]
Rule 77    idp -> empty
Rule 78    idpp -> superexpresion idppp
Rule 79    idpp -> empty
Rule 80    idppp -> , idpp
Rule 81    idppp -> empty
Rule 82    empty -> <empty>

Terminals, with rules where they appear

(                    : 2 5 22 25 26 53 75
)                    : 2 5 22 25 26 54 75
*                    : 48
+                    : 44
,                    : 63 69 80
-                    : 45
/                    : 49
;                    : 1 21 25 29 30 66
<                    : 36
=                    : 29
>                    : 37
AND                  : 32
CHAR                 : 73
CTEF                 : 56
CTEI                 : 57
DIFF                 : 39
ELSE                 : 23
EQUALS               : 38
FLOAT                : 9 72
FOR                  : 
FUNCTION             : 5
GTHANEQ              : 41
ID                   : 1 5 62 68 74
IF                   : 22
INT                  : 8 71
LTHANEQ              : 40
MAIN                 : 2
OR                   : 33
PROGRAMA             : 
RETURN               : 21
VOID                 : 10
WHILE                : 26
WRITE                : 25
[                    : 30 76
]                    : 30 76
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

asignacion           : 15
asignacionp          : 28
bloque               : 2 5 22 23 26
condicion            : 16
condicionelse        : 22
constante            : 51
ctef                 : 56
ctei                 : 57
cuerpo               : 11
empty                : 4 6 14 20 24 34 42 46 50 61 64 67 70 77 79 81
estatuto             : 13
estatutop            : 12 13
exp                  : 35 36 37 38 39 40 41 44 45
expp                 : 43
factor               : 47
function             : 3
functionAux          : 5
functionParam        : 5
id                   : 28 55
idp                  : 74
idpp                 : 75 80
idppp                : 78
lParen               : 52
main                 : 1
megaexpresion        : 31
megaexpresionp       : 35
parametro            : 60 63
parametrop           : 62
programa             : 0
programaF            : 1 3
rParen               : 52
return               : 19
superexpresion       : 21 22 25 26 29 30 32 33 52 76 78
superexpresionp      : 31
termino              : 43 48 49
terminop             : 47
tipo                 : 62 66
tipoRetorno          : 5
vars                 : 1 12 27
varsp                : 65 66
varspp               : 66 69
varsppp              : 68
while                : 18
write                : 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ID ; vars programaF main

    ID              shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> ID . ; vars programaF main

    ;               shift and go to state 3


state 3

    (1) programa -> ID ; . vars programaF main
    (65) vars -> . varsp
    (66) varsp -> . tipo varspp ; varsp
    (67) varsp -> . empty
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR
    (82) empty -> .

    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    FUNCTION        reduce using rule 82 (empty -> .)
    MAIN            reduce using rule 82 (empty -> .)

    vars                           shift and go to state 4
    varsp                          shift and go to state 5
    tipo                           shift and go to state 6
    empty                          shift and go to state 7

state 4

    (1) programa -> ID ; vars . programaF main
    (3) programaF -> . function programaF
    (4) programaF -> . empty
    (5) function -> . FUNCTION tipoRetorno ID ( functionParam ) functionAux bloque
    (6) function -> . empty
    (82) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 14
    MAIN            reduce using rule 82 (empty -> .)

  ! FUNCTION        [ reduce using rule 82 (empty -> .) ]

    programaF                      shift and go to state 11
    function                       shift and go to state 12
    empty                          shift and go to state 13

state 5

    (65) vars -> varsp .

    FUNCTION        reduce using rule 65 (vars -> varsp .)
    MAIN            reduce using rule 65 (vars -> varsp .)
    IF              reduce using rule 65 (vars -> varsp .)
    WRITE           reduce using rule 65 (vars -> varsp .)
    WHILE           reduce using rule 65 (vars -> varsp .)
    RETURN          reduce using rule 65 (vars -> varsp .)
    ID              reduce using rule 65 (vars -> varsp .)
    INT             reduce using rule 65 (vars -> varsp .)
    FLOAT           reduce using rule 65 (vars -> varsp .)
    CHAR            reduce using rule 65 (vars -> varsp .)
    }               reduce using rule 65 (vars -> varsp .)


state 6

    (66) varsp -> tipo . varspp ; varsp
    (68) varspp -> . ID varsppp

    ID              shift and go to state 16

    varspp                         shift and go to state 15

state 7

    (67) varsp -> empty .

    FUNCTION        reduce using rule 67 (varsp -> empty .)
    MAIN            reduce using rule 67 (varsp -> empty .)
    IF              reduce using rule 67 (varsp -> empty .)
    WRITE           reduce using rule 67 (varsp -> empty .)
    WHILE           reduce using rule 67 (varsp -> empty .)
    RETURN          reduce using rule 67 (varsp -> empty .)
    ID              reduce using rule 67 (varsp -> empty .)
    INT             reduce using rule 67 (varsp -> empty .)
    FLOAT           reduce using rule 67 (varsp -> empty .)
    CHAR            reduce using rule 67 (varsp -> empty .)
    }               reduce using rule 67 (varsp -> empty .)


state 8

    (71) tipo -> INT .

    ID              reduce using rule 71 (tipo -> INT .)


state 9

    (72) tipo -> FLOAT .

    ID              reduce using rule 72 (tipo -> FLOAT .)


state 10

    (73) tipo -> CHAR .

    ID              reduce using rule 73 (tipo -> CHAR .)


state 11

    (1) programa -> ID ; vars programaF . main
    (2) main -> . MAIN ( ) bloque

    MAIN            shift and go to state 18

    main                           shift and go to state 17

state 12

    (3) programaF -> function . programaF
    (3) programaF -> . function programaF
    (4) programaF -> . empty
    (5) function -> . FUNCTION tipoRetorno ID ( functionParam ) functionAux bloque
    (6) function -> . empty
    (82) empty -> .

  ! shift/reduce conflict for FUNCTION resolved as shift
    FUNCTION        shift and go to state 14
    MAIN            reduce using rule 82 (empty -> .)

  ! FUNCTION        [ reduce using rule 82 (empty -> .) ]

    function                       shift and go to state 12
    programaF                      shift and go to state 19
    empty                          shift and go to state 13

state 13

    (4) programaF -> empty .
    (6) function -> empty .

  ! reduce/reduce conflict for MAIN resolved using rule 4 (programaF -> empty .)
    MAIN            reduce using rule 4 (programaF -> empty .)
    FUNCTION        reduce using rule 6 (function -> empty .)

  ! MAIN            [ reduce using rule 6 (function -> empty .) ]


state 14

    (5) function -> FUNCTION . tipoRetorno ID ( functionParam ) functionAux bloque
    (8) tipoRetorno -> . INT
    (9) tipoRetorno -> . FLOAT
    (10) tipoRetorno -> . VOID

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    VOID            shift and go to state 23

    tipoRetorno                    shift and go to state 20

state 15

    (66) varsp -> tipo varspp . ; varsp

    ;               shift and go to state 24


state 16

    (68) varspp -> ID . varsppp
    (69) varsppp -> . , varspp
    (70) varsppp -> . empty
    (82) empty -> .

    ,               shift and go to state 26
    ;               reduce using rule 82 (empty -> .)

    varsppp                        shift and go to state 25
    empty                          shift and go to state 27

state 17

    (1) programa -> ID ; vars programaF main .

    $end            reduce using rule 1 (programa -> ID ; vars programaF main .)


state 18

    (2) main -> MAIN . ( ) bloque

    (               shift and go to state 28


state 19

    (3) programaF -> function programaF .

    MAIN            reduce using rule 3 (programaF -> function programaF .)


state 20

    (5) function -> FUNCTION tipoRetorno . ID ( functionParam ) functionAux bloque

    ID              shift and go to state 29


state 21

    (8) tipoRetorno -> INT .

    ID              reduce using rule 8 (tipoRetorno -> INT .)


state 22

    (9) tipoRetorno -> FLOAT .

    ID              reduce using rule 9 (tipoRetorno -> FLOAT .)


state 23

    (10) tipoRetorno -> VOID .

    ID              reduce using rule 10 (tipoRetorno -> VOID .)


state 24

    (66) varsp -> tipo varspp ; . varsp
    (66) varsp -> . tipo varspp ; varsp
    (67) varsp -> . empty
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR
    (82) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    FUNCTION        reduce using rule 82 (empty -> .)
    MAIN            reduce using rule 82 (empty -> .)
    IF              reduce using rule 82 (empty -> .)
    WRITE           reduce using rule 82 (empty -> .)
    WHILE           reduce using rule 82 (empty -> .)
    RETURN          reduce using rule 82 (empty -> .)
    ID              reduce using rule 82 (empty -> .)
    }               reduce using rule 82 (empty -> .)

  ! INT             [ reduce using rule 82 (empty -> .) ]
  ! FLOAT           [ reduce using rule 82 (empty -> .) ]
  ! CHAR            [ reduce using rule 82 (empty -> .) ]

    tipo                           shift and go to state 6
    varsp                          shift and go to state 30
    empty                          shift and go to state 7

state 25

    (68) varspp -> ID varsppp .

    ;               reduce using rule 68 (varspp -> ID varsppp .)


state 26

    (69) varsppp -> , . varspp
    (68) varspp -> . ID varsppp

    ID              shift and go to state 16

    varspp                         shift and go to state 31

state 27

    (70) varsppp -> empty .

    ;               reduce using rule 70 (varsppp -> empty .)


state 28

    (2) main -> MAIN ( . ) bloque

    )               shift and go to state 32


state 29

    (5) function -> FUNCTION tipoRetorno ID . ( functionParam ) functionAux bloque

    (               shift and go to state 33


state 30

    (66) varsp -> tipo varspp ; varsp .

    FUNCTION        reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    MAIN            reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    IF              reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    WRITE           reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    WHILE           reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    RETURN          reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    ID              reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    INT             reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    FLOAT           reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    CHAR            reduce using rule 66 (varsp -> tipo varspp ; varsp .)
    }               reduce using rule 66 (varsp -> tipo varspp ; varsp .)


state 31

    (69) varsppp -> , varspp .

    ;               reduce using rule 69 (varsppp -> , varspp .)


state 32

    (2) main -> MAIN ( ) . bloque
    (11) bloque -> . { cuerpo }

    {               shift and go to state 35

    bloque                         shift and go to state 34

state 33

    (5) function -> FUNCTION tipoRetorno ID ( . functionParam ) functionAux bloque
    (60) functionParam -> . parametro
    (61) functionParam -> . empty
    (62) parametro -> . tipo ID parametrop
    (82) empty -> .
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR

    )               reduce using rule 82 (empty -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10

    functionParam                  shift and go to state 36
    parametro                      shift and go to state 37
    empty                          shift and go to state 38
    tipo                           shift and go to state 39

state 34

    (2) main -> MAIN ( ) bloque .

    $end            reduce using rule 2 (main -> MAIN ( ) bloque .)


state 35

    (11) bloque -> { . cuerpo }
    (12) cuerpo -> . vars estatutop
    (65) vars -> . varsp
    (66) varsp -> . tipo varspp ; varsp
    (67) varsp -> . empty
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR
    (82) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10
    IF              reduce using rule 82 (empty -> .)
    WRITE           reduce using rule 82 (empty -> .)
    WHILE           reduce using rule 82 (empty -> .)
    RETURN          reduce using rule 82 (empty -> .)
    ID              reduce using rule 82 (empty -> .)
    }               reduce using rule 82 (empty -> .)

  ! INT             [ reduce using rule 82 (empty -> .) ]
  ! FLOAT           [ reduce using rule 82 (empty -> .) ]
  ! CHAR            [ reduce using rule 82 (empty -> .) ]

    cuerpo                         shift and go to state 40
    vars                           shift and go to state 41
    varsp                          shift and go to state 5
    tipo                           shift and go to state 6
    empty                          shift and go to state 7

state 36

    (5) function -> FUNCTION tipoRetorno ID ( functionParam . ) functionAux bloque

    )               shift and go to state 42


state 37

    (60) functionParam -> parametro .

    )               reduce using rule 60 (functionParam -> parametro .)


state 38

    (61) functionParam -> empty .

    )               reduce using rule 61 (functionParam -> empty .)


state 39

    (62) parametro -> tipo . ID parametrop

    ID              shift and go to state 43


state 40

    (11) bloque -> { cuerpo . }

    }               shift and go to state 44


state 41

    (12) cuerpo -> vars . estatutop
    (13) estatutop -> . estatuto estatutop
    (14) estatutop -> . empty
    (15) estatuto -> . asignacion
    (16) estatuto -> . condicion
    (17) estatuto -> . write
    (18) estatuto -> . while
    (19) estatuto -> . return
    (20) estatuto -> . empty
    (82) empty -> .
    (27) asignacion -> . vars
    (28) asignacion -> . id asignacionp
    (22) condicion -> . IF ( superexpresion ) bloque condicionelse
    (25) write -> . WRITE ( superexpresion ) ;
    (26) while -> . WHILE ( superexpresion ) bloque
    (21) return -> . RETURN superexpresion ;
    (65) vars -> . varsp
    (74) id -> . ID idp
    (66) varsp -> . tipo varspp ; varsp
    (67) varsp -> . empty
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
    }               reduce using rule 82 (empty -> .)
    IF              shift and go to state 55
    WRITE           shift and go to state 56
    WHILE           shift and go to state 57
    RETURN          shift and go to state 58
    ID              shift and go to state 59
    INT             shift and go to state 8
    FLOAT           shift and go to state 9
    CHAR            shift and go to state 10

  ! IF              [ reduce using rule 82 (empty -> .) ]
  ! WRITE           [ reduce using rule 82 (empty -> .) ]
  ! WHILE           [ reduce using rule 82 (empty -> .) ]
  ! RETURN          [ reduce using rule 82 (empty -> .) ]
  ! ID              [ reduce using rule 82 (empty -> .) ]
  ! INT             [ reduce using rule 82 (empty -> .) ]
  ! FLOAT           [ reduce using rule 82 (empty -> .) ]
  ! CHAR            [ reduce using rule 82 (empty -> .) ]

    vars                           shift and go to state 45
    estatutop                      shift and go to state 46
    estatuto                       shift and go to state 47
    empty                          shift and go to state 48
    asignacion                     shift and go to state 49
    condicion                      shift and go to state 50
    write                          shift and go to state 51
    while                          shift and go to state 52
    return                         shift and go to state 53
    id                             shift and go to state 54
    varsp                          shift and go to state 5
    tipo                           shift and go to state 6

state 42

    (5) function -> FUNCTION tipoRetorno ID ( functionParam ) . functionAux bloque
    (7) functionAux -> .

    {               reduce using rule 7 (functionAux -> .)

    functionAux                    shift and go to state 60

state 43

    (62) parametro -> tipo ID . parametrop
    (63) parametrop -> . , parametro
    (64) parametrop -> . empty
    (82) empty -> .

    ,               shift and go to state 62
    )               reduce using rule 82 (empty -> .)

    parametrop                     shift and go to state 61
    empty                          shift and go to state 63

state 44

    (11) bloque -> { cuerpo } .

    $end            reduce using rule 11 (bloque -> { cuerpo } .)
    FUNCTION        reduce using rule 11 (bloque -> { cuerpo } .)
    MAIN            reduce using rule 11 (bloque -> { cuerpo } .)
    ELSE            reduce using rule 11 (bloque -> { cuerpo } .)
    IF              reduce using rule 11 (bloque -> { cuerpo } .)
    WRITE           reduce using rule 11 (bloque -> { cuerpo } .)
    WHILE           reduce using rule 11 (bloque -> { cuerpo } .)
    RETURN          reduce using rule 11 (bloque -> { cuerpo } .)
    ID              reduce using rule 11 (bloque -> { cuerpo } .)
    INT             reduce using rule 11 (bloque -> { cuerpo } .)
    FLOAT           reduce using rule 11 (bloque -> { cuerpo } .)
    CHAR            reduce using rule 11 (bloque -> { cuerpo } .)
    }               reduce using rule 11 (bloque -> { cuerpo } .)


state 45

    (27) asignacion -> vars .

    IF              reduce using rule 27 (asignacion -> vars .)
    WRITE           reduce using rule 27 (asignacion -> vars .)
    WHILE           reduce using rule 27 (asignacion -> vars .)
    RETURN          reduce using rule 27 (asignacion -> vars .)
    ID              reduce using rule 27 (asignacion -> vars .)
    INT             reduce using rule 27 (asignacion -> vars .)
    FLOAT           reduce using rule 27 (asignacion -> vars .)
    CHAR            reduce using rule 27 (asignacion -> vars .)
    }               reduce using rule 27 (asignacion -> vars .)


state 46

    (12) cuerpo -> vars estatutop .

    }               reduce using rule 12 (cuerpo -> vars estatutop .)


state 47

    (13) estatutop -> estatuto . estatutop
    (13) estatutop -> . estatuto estatutop
    (14) estatutop -> . empty
    (15) estatuto -> . asignacion
    (16) estatuto -> . condicion
    (17) estatuto -> . write
    (18) estatuto -> . while
    (19) estatuto -> . return
    (20) estatuto -> . empty
    (82) empty -> .
    (27) asignacion -> . vars
    (28) asignacion -> . id asignacionp
    (22) condicion -> . IF ( superexpresion ) bloque condicionelse
    (25) write -> . WRITE ( superexpresion ) ;
    (26) while -> . WHILE ( superexpresion ) bloque
    (21) return -> . RETURN superexpresion ;
    (65) vars -> . varsp
    (74) id -> . ID idp
    (66) varsp -> . tipo varspp ; varsp
    (67) varsp -> . empty
    (71) tipo -> . INT
    (72) tipo -> . FLOAT
    (73) tipo -> . CHAR
